<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFEBE9"
    android:orientation="vertical"
    android:paddingStart="?android:attr/expandableListPreferredChildIndicatorLeft"
    android:paddingLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
    android:paddingTop="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="375dp"
            android:layout_height="245dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/book_1" />

            <TextView
                android:id="@+id/edName"
                android:layout_width="210dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:text="@string/javanetbeans"
                android:textColor="#59504C"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="214dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:text="@string/HaithamAndSalim"
                android:textColor="#59504C"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="215dp"
                android:layout_height="28dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:text="@string/price"
                android:textColor="#59504C"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.425" />

            <TextView
                android:id="@+id/tvBorrowingPeriod"
                android:layout_width="216dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:text="@string/BorrowingPeriod"
                android:textColor="#59504C"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.61" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="214dp"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:text="@string/booktype"
                android:textColor="#59504C"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.81" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="237dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="225dp"
                app:layout_constraintGuide_percent="0.425" />

            <Button
                android:id="@+id/button_choose"
                android:layout_width="170dp"
                android:layout_height="32dp"
                android:background="@color/white"
                android:backgroundTint="#59504C"
                android:text="@string/i_want_the_book"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>